2-way comm with TV (cec) - finally; Z-Wave over AgoControll

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,8 @@
 
 <!--                     <h2>Wybierz opcję</h2> -->
 
+                    <p><a href=# id=tv_power  class="button">TV</a>&nbsp;&nbsp;<a href=# id=tv_status  class="button">Stan TV</a>
+                    <br/>
                     <p><a href=# id=tv_on  class="button">Włącz TV</a>&nbsp;&nbsp;<a href=# id=tv_off  class="button">Wyłącz TV</a>
                     <br/>
                     <a href=# id=TV_HDMI1  class="button">HDMI 1</a>&nbsp;&nbsp;<a href=# id=TV_HDMI2  class="button">HDMI 2</a>&nbsp;&nbsp;<a href=# id=tv_HDMI3  class="button">HDMI 3</a>
