added zwave shutter roller

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,11 @@
                   <div class="grid-10 grid">
 
 <!--                     <h2>Wybierz opcję</h2> -->
-
                     <p><a href=# id=tv_power  class="button">TV</a>&nbsp;&nbsp;<a href=# id=tv_status  class="button">Stan TV</a>
                     <br/>
-                    <p><a href=# id=tv_on  class="button">Włącz TV</a>&nbsp;&nbsp;<a href=# id=tv_off  class="button">Wyłącz TV</a>
+<!--                     <p><a href=# id=tv_on  class="button">Włącz TV</a>&nbsp;&nbsp;<a href=# id=tv_off  class="button">Wyłącz TV</a>
                     <br/>
-                    <a href=# id=TV_HDMI1  class="button">HDMI 1</a>&nbsp;&nbsp;<a href=# id=TV_HDMI2  class="button">HDMI 2</a>&nbsp;&nbsp;<a href=# id=tv_HDMI3  class="button">HDMI 3</a>
+ -->                    <a href=# id=TV_HDMI1  class="button">HDMI 1</a>&nbsp;&nbsp;<a href=# id=TV_HDMI2  class="button">HDMI 2</a>&nbsp;&nbsp;<a href=# id=tv_HDMI3  class="button">HDMI 3</a>
                     <hr /> 		
                     <p><a href=# id=ncplus_power  class="button">Włącz NC+</a>&nbsp;&nbsp;<a href=# id=ncplus_mute  class="button">Mute NC+</a>
                     <br/>
@@ -24,9 +23,11 @@
                     <a href=# id=ncplus_left class="button">&lt;</a>&nbsp;<a href=# id=ncplus_right class="button" >&gt;</a>
                     <hr /> 		
                     <p><a href=# id=ZWAVE_speakers-on  class="button">Włącz głośnik</a>&nbsp;&nbsp;<a href=# id=ZWAVE_speakers-off  class="button">Wyłącz głośnik</a>
+                    <br/>
+                    <p><a href=# id=ZWAVE_roller-on  class="button">Odsłoń roletę</a>&nbsp;&nbsp;<a href=# id=ZWAVE_roller-off  class="button">Zasłoń roletę</a>
                     <hr />
                     <p><a href=# id=wol_htpc class="button">Włącz HTPC</a>&nbsp;&nbsp;<a href=# id=x10_power  class="button">Wyłącz HTPC</a>
-                    <hr />
+                    <br />
                     <p><a href=# id=wol_pr_p class="button">XBMC Głoś. +</a>&nbsp;&nbsp;<a href=# id=x10_pr_m  class="button">XBMC Głoś. -</a>
 
                   </div><!--end of grid-10--> 
