--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,8 +23,10 @@
             <link rel="apple-touch-icon-precomposed" href="img/icon.png" />
             
             <script src="js/respond-min.js" type="text/javascript"></script>
+            <script src="js/jquery164min.js" type="text/javascript"></script>
+            <!--local
             <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js" type="text/javascript"></script>
-            <script>window.jQuery || document.write('<script src="scripts/jquery164min.js">\x3C/script>')</script><!--local fallback for JQuery-->
+            <script>window.jQuery || document.write('<script src="js/jquery164min.js">\x3C/script>')</script><!--local fallback for JQuery-->
 			<script src="js/jquery.flexslider-min.js" type="text/javascript"></script>
             <link rel="stylesheet" href="css/flexslider.css" />
             
