added voice control and communication with Jasper Project over named pipe. Speech recognition is done in Chrome browser using google engine. Fast, reliable and mobile.  TODO:  - fix problem when sending utf-8 string to named pipe  - when flask server doesn't run on ssl (https), browser will keeps asking for permission to use microphone each time you try to use it

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en"><!-- use class="debug" here if you develope a template and want to check-->
+<html lang="en"><!-- use class="debug" here if you develop a template and want to check-->
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
