--- a/templates/htpc.html
+++ b/templates/htpc.html
@@ -7,11 +7,23 @@
                     <h2>HTPC</h2> 
 
                     <p><a href=# id=wol_htpc class="button">Włącz HTPC</a>&nbsp;&nbsp;<a href=# id=x10_power  class="button">Wyłącz HTPC</a>
+                    <br />
+                    <p><a href=# id=x10_pause class="button">Play</a>&nbsp;&nbsp;<a href=# id=x10_stop      class="button">Stop</a></p>
+                    <p><a href=# id=x10_prev  class="button">Poprzedni</a>&nbsp;&nbsp;<a href=# id=x10_next class="button">Następny</a></p>
+                    <p><a href=# id=x10_down  class="button">W dół</a>&nbsp;&nbsp;<a href=# id=x10_up       class="button">Do góry</a></p>
+                    <p><a href=# id=x10_ok    class="button">Ok</a>&nbsp;&nbsp;<a href=# id=x10_pr_back     class="button">Wróć</a></p>
+                    <p><a href=# id=x10_left  class="button">W lewo</a>&nbsp;&nbsp;<a href=# id=x10_right   class="button">W prawo</a></p>
+
+                    <p><a href=# id=x10_pr_p class="button">XBMC Głoś. +</a>&nbsp;&nbsp;<a href=# id=x10_pr_m  class="button">XBMC Głoś. -</a></p>
+                    <p><a href=# id=x10_vol_u class="button">Win Głoś. +</a>&nbsp;&nbsp;<a href=# id=x10_vol_d  class="button">Win Głoś. -</a></p>
+                    <br />
+
                   </div><!--end of grid-10--> 
             </div><!--end of grids-->
     </div><!--end of wrapper-->
      <div class="wrapper">   
-                 <div class="grids">
+     
+            <div class="grids">
                   <div class="grid-3 grid"> 
                     <p><a href=# id=x10_pr_p class="button">XBMC Głoś. +</a>
                        <br/>
