--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,10 @@
 <!--                     <p><a href=# id=tv_on  class="button">Włącz TV</a>&nbsp;&nbsp;<a href=# id=tv_off  class="button">Wyłącz TV</a>
                     <br/>
  -->                    <a href=# id=TV_HDMI1  class="button">HDMI 1</a>&nbsp;&nbsp;<a href=# id=TV_HDMI2  class="button">HDMI 2</a>&nbsp;&nbsp;<a href=# id=tv_HDMI3  class="button">HDMI 3</a>
+                    <hr/>
+                    <a href=# id=jasper_on  class="button">JASPER</a>&nbsp;&nbsp;<a href=# id=jasper_echo  class="button">Echo</a>&nbsp;&nbsp;<a href=# id=jasper_przeladuj  class="button">Przeładuj</a>&nbsp;&nbsp;<a href=# id=jasper_koniec  class="button">Koniec</a>
+                    <br/>
+
                     <hr /> 		
                     <p><a href=# id=ncplus_power  class="button">Włącz NC+</a>&nbsp;&nbsp;<a href=# id=ncplus_mute  class="button">Mute NC+</a>
                     <br/>
