--- a/templates/ncplus.html
+++ b/templates/ncplus.html
@@ -6,16 +6,43 @@
 
                      <h2>NC+</h2>
 
-                    <p><a href=# id=ncplus_power  class="button">Włącz NC+</a>&nbsp;&nbsp;<a href=# id=ncplus_mute  class="button">Mute NC+</a>
+                    <p>
+                    <a href=# id=ncplus_vod  class="button">VOD</a>&nbsp;<a href=# id=ncplus_power  class="button">Włącz NC+</a>
+                    <br/>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href=# id=ncplus_n  class="button">N</a>&nbsp;
+                    <br/>
+                    <a href=# id=ncplus_epg  class="button">EPG</a>&nbsp;<a href=# id=ncplus_home  class="button">Home</a>
+                    <br/>
+                    <a href=# id=ncplus_info  class="button">Info</a>&nbsp;<a href=# id=ncplus_app class="button" >App</a>&nbsp;<a href=# id=ncplus_opt class="button" >Opt</a>
                     <br/>
                     <a href=# id=ncplus_pr_p  class="button">Kanał +</a>&nbsp;<a href=# id=ncplus_pr_m class="button" >Kanał -</a>
-                    <a href=# id=ncplus_vol_p class="button">Głośność +</a>&nbsp;<a href=# id=ncplus_vol_m class="button" >Głośność -</a>
                     <br/>
-                    <a href=# id=ncplus_up class="button">/\</a>&nbsp;<a href=# id=ncplus_down class="button" >\/</a>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href=# id=ncplus_up class="button">/\</a>&nbsp;
                     <br/>
-                    <a href=# id=ncplus_ok class="button">OK</a>&nbsp;<a href=# id=ncplus_back class="button" >BACK</a>
+                    <a href=# id=ncplus_left class="button">&lt;</a>&nbsp;<a href=# id=ncplus_ok class="button">OK</a>&nbsp;<a href=# id=ncplus_right class="button" >&gt;</a>
+                    <br/>                    
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href=# id=ncplus_down class="button" >\/</a>
                     <br/>
-                    <a href=# id=ncplus_left class="button">&lt;</a>&nbsp;<a href=# id=ncplus_right class="button" >&gt;</a>
+                    <a href=# id=ncplus_back class="button" >BACK</a>
+                    <br/>
+                    <a href=# id=ncplus_vol_p class="button">Głośność +</a>&nbsp;&nbsp;<a href=# id=ncplus_mute  class="button">Wycisz NC+</a>&nbsp;<a href=# id=ncplus_vol_m class="button" >Głośność -</a>
+                    <br/>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href=# id=ncplus_rev  class="button">&lt;&lt;</a>&nbsp;<a href=# id=ncplus_pause class="button" >||</a>&nbsp;<a href=# id=ncplus_ff class="button" >&gt;&gt;</a>
+                    <br/>
+                    <a href=# id=ncplus_stop  class="button">Stop</a>&nbsp;<a href=# id=ncplus_play class="button" >Play</a>&nbsp;<a href=# id=ncplus_rec class="button" >Rec</a>
+                    <br/>
+                    <a href=# id=ncplus_mute  class="button">Wycisz</a>&nbsp;<a href=# id=ncplus_porta class="button" >@</a>&nbsp;<a href=# id=ncplus_text class="button" >Text</a>&nbsp;<a href=# id=ncplus_list class="button" >List</a>
+                    <br/>
+                    <a href=# id=ncplus_red  class="button">Czerwony</a>&nbsp;<a href=# id=ncplus_grenn class="button" >Zielony</a>&nbsp;<a href=# id=ncplus_yellow class="button" >Żółty</a>&nbsp;<a href=# id=ncplus_blue class="button" >Niebieski</a>
+                    <br/>
+                    <a href=# id=ncplus_1 class="button">1</a>&nbsp;<a href=# id=ncplus_2 class="button" >2</a>&nbsp;<a href=# id=ncplus_3 class="button" >3</a>
+                    <br/>
+                    <a href=# id=ncplus_4 class="button">4</a>&nbsp;<a href=# id=ncplus_5 class="button" >5</a>&nbsp;<a href=# id=ncplus_6 class="button" >6</a>
+                    <br/>
+                    <a href=# id=ncplus_7 class="button">7</a>&nbsp;<a href=# id=ncplus_8 class="button" >8</a>&nbsp;<a href=# id=ncplus_9 class="button" >9</a>
+                    <br/>
+                    <a href=# id=ncplus_setup class="button">S</a>&nbsp;<a href=# id=ncplus_0 class="button" >0</a>&nbsp;<a href=# id=ncplus_star class="button" >*</a>
+                    <br/>
 
                   </div><!--end of grid-10--> 
             </div><!--end of grids-->
